samples/_failures_safe/1761647869_6dce23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5e51206.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_b5e51206.c:131:5: error: expected declaration or statement at end of input
  131 |     }
      |     ^
